--- a/admin-auth/views/login.pug
+++ b/admin-auth/views/login.pug
@@ -4,6 +4,7 @@ html
         meta(charset="utf-8")
         meta(name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no")
         title='Login Page'
+        link(rel="shortcut icon" href="/img/health.png")
         link(href='/assets/login.css' type='text/css' rel="stylesheet")
 
     body.text-center
