--- a/ncms/views/layouts/layout.pug
+++ b/ncms/views/layouts/layout.pug
@@ -18,5 +18,5 @@ html
     block scripts
         script(type="text/javascript").
             window.locals = {}
-            window.locals = !{JSON.stringify(locals)}
+            window.locals = !{JSON.stringify(locals.data)}
         script(type="text/javascript" src="/assets/main.js")
