--- a/ncms/public/scss/content.scss
+++ b/ncms/public/scss/content.scss
@@ -106,6 +106,11 @@ $card-btn-color:  $navbar-bg-color;
     //    @include button-outline-variant($value);
     //  }
     //}
+
+    .filter-date {
+      border-top-left-radius: 0;
+      border-bottom-left-radius: 0;
+    }
   }
 
   #login {
